fix: Change `Visit Portal` link

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       </div>
     </div>
     <div class="bottom flex-center" style="height: 20%; background: #292653">
-      <a href="#" class="button" style="font-size: 2rem; padding: 20px 30px; border-radius: 10px;">Visit Portal</a>
+      <a href="https://cbse.kavin.me" class="button" style="font-size: 2rem; padding: 20px 30px; border-radius: 10px;">Visit Portal</a>
     </div>
   </div>
 </body>
